--- a/Examples/Storage/index.html
+++ b/Examples/Storage/index.html
@@ -15,6 +15,8 @@
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
 		<style>
+			h2 span { display: block; float: left; }
+			h2 span.badge { margin-top: 10px; margin-left: 10px; }
 			.pointer { cursor: pointer; }
 		</style>
 	</head>
@@ -57,7 +59,8 @@
 						</div>
 						<div class="col-md-6">
 							<div ng-if="haveKeys()" class="fx-zoom-up">
-								<h2>Saved Keys</h2>
+								<h2><span>Saved Keys</span> <span class="badge" ng-hide="keys.length <= 0">{{keys.length}}</span></h2>
+								<br style="clear:both">
 								<p class="text-info" ng-hide="stored.key == ''">
 									<strong>Storage Value:</strong> {{stored.key}} = {{stored.val}}
 								</p>
